<resources>
    <string name="app_name">MobTerminal</string>

    <string name="some_error">Some Error Occurred!</string>
    <string name="exit">ВЫХОД</string>
    <string name="scan_your_code">Отсканируйте свой штрихкод: </string>
    <string name="enter_your_pin">Введите свой Pin-код: </string>
    <string name="login">Логин</string>
    <string name="enter">войти</string>
    <string name="sort">сортировать</string>
    <string name="close_cell">закрыть ячейку</string>
    <string name="config_printer">Настройка принтера</string>

    <string name="btnScannerSelectBarcode">Scanner Selection Example</string>
    <string name="btnSwitchScanners">Switch Scanners</string>
    <string name="txtBarcodeTitle">Press the device\'s scan button to scan a barcode.</string>
    <string name="scan_package">Сканируйте ШПИ посылки</string>
    <string name="your_code">ваш штрихкод</string>
    <string name="scan_bag">Сканируйте ШПИ мешка</string>
    <string name="enter_seal">Введите номер пломбы</string>
    <string name="enter_weight">Введите вес</string>
    <string name="back">назад</string>
    <string name="next">далее</string>
    <string name="chose_printer">Выбор принтера</string>
    <string name="repeat_label_print">повторить печать ярлыка</string>
    <string name="no_user_barcode">нет баркода оператора</string>
    <string name="pin">Пин-код</string>
    <string name="cell_tracknumber">ШПИ ячейки</string>
    <string name="dest_tracknumber">ШПИ отправления</string>
    <string name="cell_number">Номер ячейки</string>
    <string name="scan_cell">Отсканируйте ШПИ ячейки</string>

    <string name="g_number">Номер G-накладной:</string>
    <string name="seal_number">Номер пломбы:</string>
    <string name="bag_weight">Вес мешка:</string>
    <string name="operator_name">ФИО оператора:</string>
    <string name="bag_close_time">Время закрытия мешка:</string>
    <string name="to_dep_index">Индекс пункта назначения:</string>
    <string name="to_dep_name">Название пункта назначения:</string>
</resources>
