<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="kazpost.kz.mobterminal.ui.main.MainActivity">

    <LinearLayout
        android:id="@+id/ll1_main"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/colorBlue"
            android:text="@string/sort"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_close_cell"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/colorBlue"
            android:text="@string/close_cell"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/ll1_main"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_config_printer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/colorBlue"
            android:text="@string/config_printer"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/colorBlue"
            android:text="@string/exit"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
